# contracts

.github/workflows/: wasm-size.yml
contracts/adl_handler/: Cargo.toml
contracts/exchange_router/: Cargo.toml
contracts/exchange_router/src/: lib.rs
contracts/exchange_router/test_snapshots/tests/: cancel_deposit_succeeds_when_paused.1.json  create_deposit_reverts_when_paused.1.json  e2e_client_liquidation_healthy_reverts.1.json  e2e_client_liquidation_underwater_succeeds.1.json  e2e_deposit_then_withdraw_recovers_tokens.1.json  e2e_deposit_trade_withdraw_pool_accounting.1.json  e2e_multicall_failed_step_reverts_preceding_steps.1.json  e2e_multicall_send_tokens_then_create_order_succeeds.1.json
contracts/liquidation_handler/: Cargo.toml
contracts/oracle/src/: lib.rs
docs/: architecture.md  build.md  config-keys.md  events.md  security.md
libs/deposit_flow/: Cargo.toml
libs/increase_position_utils/: Cargo.toml
libs/math/: Cargo.toml
libs/position_list/: Cargo.toml
libs/position_utils/: Cargo.toml
libs/position_utils/test_snapshots/tests/: borrowing_fee_proportional_to_cum_factor_delta.1.json  differential_borrowing_fee_matches_reference_formula.1.json  differential_position_pnl_long_loss_matches_reference.1.json  position_fee_matches_bps_formula.1.json  property_healthy_position_is_not_liquidatable.1.json  property_position_fees_never_negative.1.json  property_total_cost_is_sum_of_components.1.json  settle_funding_credits_claimable_when_owed.1.json  settle_funding_resets_tracker_to_current_global.1.json
libs/pricing_utils/: Cargo.toml
libs/storage_ttl/: Cargo.toml
libs/withdrawal_flow/: Cargo.toml
mx/: build.mk  upgrade.mk
scripts/: gen_baseline.py  seed_liquidity.sh  test_positions.sh
(+135 files in other folders)
