[package]
name = "gmx-position-utils"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
soroban-sdk      = { workspace = true }
gmx-types        = { path = "../types" }
gmx-math         = { path = "../math" }
gmx-keys         = { path = "../keys" }
gmx-market-utils = { path = "../market_utils" }

[dev-dependencies]
soroban-sdk  = { workspace = true, features = ["testutils"] }
role-store   = { path = "../../contracts/role_store" }
data-store   = { path = "../../contracts/data_store" }
